# gregory

./: .gitignore  Cargo.toml  README.md  dev-setup.sh  docker-compose.example.yml  gregory.example.toml  gregory.example.yml  podman-compose.dev.yml  podman-compose.example.yml  test.bash  test.sh
docs/: cli-arguments.md  config-reference.md  database.md  default-max-threads.md
docs/behind-the-scenes/: commands.md  default-max-threads.md
src/: README.md  benchmark.rs  cli.rs  data.rs  errors.rs  logging.rs  main.rs  tests.rs
